// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design Tokens matches the Console theme 1`] = `
"{
  \\"color-background-user\\": \\"rgb(200, 175, 240)\\",
  \\"color-background-trial\\": \\"rgb(199, 255, 226)\\",
  \\"color-background-subaccount\\": \\"rgb(255, 241, 179)\\",
  \\"color-background-primary-darker\\": \\"rgb(3, 44, 94)\\",
  \\"color-background-primary-lighter\\": \\"rgb(220, 234, 244)\\",
  \\"color-background-destructive-darker\\": \\"rgb(96, 1, 1)\\",
  \\"color-background-destructive-lighter\\": \\"rgb(245, 221, 221)\\",
  \\"color-background-brand-highlight-lightest\\": \\"rgba(242, 47, 70, 0.1)\\",
  \\"color-background-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-inverse-light\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-background-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-warning\\": \\"rgb(228, 98, 22)\\",
  \\"color-background-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-background-inverse-strong\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-error-lightest\\": \\"rgb(255, 233, 231)\\",
  \\"color-background-new\\": \\"rgb(231, 220, 250)\\",
  \\"color-background-neutral-lightest\\": \\"rgb(245, 248, 255)\\",
  \\"color-background-dark\\": \\"rgb(228, 231, 233)\\",
  \\"color-background-strong\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-destructive\\": \\"rgb(226, 37, 37)\\",
  \\"color-background-primary\\": \\"rgb(2, 122, 197)\\",
  \\"color-background-primary-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-success\\": \\"rgb(0, 153, 74)\\",
  \\"color-background-destructive-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-row-striped\\": \\"rgb(248, 248, 249)\\",
  \\"color-background-primary-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-background-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-background-success-lightest\\": \\"rgb(224, 255, 239)\\",
  \\"color-background-destructive-lightest\\": \\"rgb(255, 233, 231)\\",
  \\"color-background-error-dark\\": \\"rgb(146, 18, 0)\\",
  \\"color-background-primary-lightest\\": \\"rgb(245, 248, 255)\\",
  \\"color-background-primary-darkest\\": \\"rgb(0, 9, 43)\\",
  \\"color-background-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-brand\\": \\"rgb(35, 54, 89)\\",
  \\"color-background-error\\": \\"rgb(226, 37, 37)\\",
  \\"color-background-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-required\\": \\"rgb(222, 88, 88)\\",
  \\"color-background-destructive-dark\\": \\"rgb(146, 18, 0)\\",
  \\"color-background-destructive-light\\": \\"rgb(236, 182, 182)\\",
  \\"color-background-primary-dark\\": \\"rgb(0, 62, 130)\\",
  \\"color-background-primary-light\\": \\"rgb(179, 211, 233)\\",
  \\"color-background-warning-lightest\\": \\"rgb(255, 236, 216)\\",
  \\"color-background-body\\": \\"rgb(255, 255, 255)\\",
  \\"color-background-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-background-darker\\": \\"rgb(200, 204, 207)\\",
  \\"color-background\\": \\"rgb(248, 248, 249)\\",
  \\"color-background-primary-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-background-stronger\\": \\"rgb(136, 145, 170)\\",
  \\"color-background-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-background-strongest\\": \\"rgb(75, 86, 113)\\",
  \\"color-background-body-inverse\\": \\"rgb(40, 42, 43)\\",
  \\"color-background-inverse\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-background-overlay\\": \\"rgba(40, 42, 43, 0.5)\\",
  \\"color-background-darkest\\": \\"rgb(112, 117, 120)\\",
  \\"color-border-warning-weak\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-error-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-destructive-lighter\\": \\"rgb(245, 221, 221)\\",
  \\"color-border-primary-lighter\\": \\"rgb(220, 234, 244)\\",
  \\"color-border-inverse-lightest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-primary-darker\\": \\"rgb(3, 44, 94)\\",
  \\"color-border-warning\\": \\"rgb(228, 98, 22)\\",
  \\"color-border-destructive-darker\\": \\"rgb(96, 1, 1)\\",
  \\"color-border-lighter-stronger\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-border-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-border-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-lightest-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-destructive\\": \\"rgb(226, 37, 37)\\",
  \\"color-border-primary\\": \\"rgb(2, 122, 197)\\",
  \\"color-border-success\\": \\"rgb(0, 153, 74)\\",
  \\"color-border-lighter\\": \\"rgb(228, 231, 233)\\",
  \\"color-border-error-lightest\\": \\"rgb(255, 233, 231)\\",
  \\"color-border-dark\\": \\"rgb(136, 140, 142)\\",
  \\"color-border-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-border-strong\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-warning-light\\": \\"rgb(242, 133, 16)\\",
  \\"color-border-inverse-lighter\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-weak\\": \\"rgb(202, 205, 216)\\",
  \\"color-border-neutral\\": \\"rgb(2, 122, 197)\\",
  \\"color-border-success-lightest\\": \\"rgb(224, 255, 239)\\",
  \\"color-border-error\\": \\"rgb(226, 37, 37)\\",
  \\"color-border-error-dark\\": \\"rgb(146, 18, 0)\\",
  \\"color-border-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-error-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-destructive-light\\": \\"rgb(236, 182, 182)\\",
  \\"color-border-primary-light\\": \\"rgb(179, 211, 233)\\",
  \\"color-border-neutral-weak\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-success-light\\": \\"rgb(35, 191, 110)\\",
  \\"color-border\\": \\"rgb(136, 140, 142)\\",
  \\"color-border-inverse-darker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-warning-lightest\\": \\"rgb(255, 236, 216)\\",
  \\"color-border-primary-dark\\": \\"rgb(0, 62, 130)\\",
  \\"color-border-destructive-dark\\": \\"rgb(146, 18, 0)\\",
  \\"color-border-success-weak\\": \\"rgb(54, 213, 118)\\",
  \\"color-border-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-border-neutral-light\\": \\"rgb(200, 204, 207)\\",
  \\"color-border-inverse\\": \\"rgba(255, 255, 255, 0.5)\\",
  \\"color-border-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-primary-weak\\": \\"rgb(102, 179, 255)\\",
  \\"color-border-error-light\\": \\"rgb(222, 88, 88)\\",
  \\"color-border-destructive-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-weaker\\": \\"rgb(225, 227, 234)\\",
  \\"color-border-light\\": \\"rgb(200, 204, 207)\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"2px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"border-width-30\\": \\"4px\\",
  \\"border-width-40\\": \\"8px\\",
  \\"shadow\\": \\"0 8px 16px 0 rgba(40, 42, 43, 0.2)\\",
  \\"shadow-border-inverse-lightest\\": \\"0 0 0 1px #ffffff\\",
  \\"shadow-border-destructive-darker\\": \\"0 0 0 1px #600101\\",
  \\"shadow-border-primary-darker\\": \\"0 0 0 1px #032c5e\\",
  \\"shadow-border-light\\": \\"0 0 0 1px #e4e7e9\\",
  \\"shadow-border-destructive-stronger\\": \\"0 0 0 1px #4a0b0b\\",
  \\"shadow-border-primary-stronger\\": \\"0 0 0 1px #030b5d\\",
  \\"shadow-border-destructive-lighter\\": \\"0 0 0 1px #f5dddd\\",
  \\"shadow-border-destructive-weaker\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-primary-weaker\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-border-primary-lighter\\": \\"0 0 0 1px #dceaf4\\",
  \\"shadow-border-inverse-light\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-low\\": \\"0 2px 4px 0 rgba(40, 42, 43, 0.3)\\",
  \\"shadow-border-inverse-strong\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-border-strong\\": \\"0 0 0 1px #cacdd8\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(2, 122, 197, 0.8)\\",
  \\"shadow-focus-inverse\\": \\"0 0 0 4px rgba(255, 255, 255, 0.4)\\",
  \\"shadow-border-primary\\": \\"0 0 0 1px #027ac5\\",
  \\"shadow-border-destructive\\": \\"0 0 0 1px #e22525\\",
  \\"shadow-border-error-dark\\": \\"0 0 0 1px #921200\\",
  \\"shadow-high\\": \\"0 12px 24px 4px rgba(40, 42, 43, 0.2)\\",
  \\"shadow-border-lighter\\": \\"0 0 0 1px #f8f8f9\\",
  \\"shadow-border-error-strong\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-border-error-weak\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-border-error\\": \\"0 0 0 1px #e22525\\",
  \\"shadow-border-inverse-darker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-dark\\": \\"0 0 0 1px #003e82\\",
  \\"shadow-border-inverse-weaker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-strong\\": \\"0 0 0 1px #001489\\",
  \\"shadow-border-primary-light\\": \\"0 0 0 1px #b3d3e9\\",
  \\"shadow-border-primary-weak\\": \\"0 0 0 1px #99cdff\\",
  \\"shadow-border-destructive-light\\": \\"0 0 0 1px #ecb6b6\\",
  \\"shadow-border-destructive-weak\\": \\"0 0 0 1px #f6b1b1\\",
  \\"shadow-border-stronger\\": \\"0 0 0 1px #e1e3ea\\",
  \\"shadow-border\\": \\"0 0 0 1px #888c8e\\",
  \\"shadow-border-inverse\\": \\"0 0 0 1px rgba(255, 255, 255, 0.5)\\",
  \\"shadow-border-error-light\\": \\"0 0 0 1px #ecb6b6\\",
  \\"shadow-card\\": \\"0 2px 4px 0 rgba(40, 42, 43, 0.3)\\",
  \\"shadow-border-inverse-strongest\\": \\"0 0 0 1px #ffffff\\",
  \\"font-family-text\\": \\"'Whitney SSm A', 'Whitney SSm B', 'Helvetica Neue', Helvetica, Arial, sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"300\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"500\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-0\\": \\"0\\",
  \\"line-height-110\\": \\"4rem\\",
  \\"line-height-90\\": \\"2.75rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.5rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.5rem\\",
  \\"line-height-30\\": \\"1.25rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-gray-0\\": \\"rgb(255, 255, 255)\\",
  \\"color-gray-100\\": \\"rgb(40, 42, 43)\\",
  \\"color-gray-90\\": \\"rgb(66, 69, 71)\\",
  \\"color-gray-80\\": \\"rgb(79, 83, 85)\\",
  \\"color-gray-70\\": \\"rgb(112, 117, 120)\\",
  \\"color-gray-60\\": \\"rgb(136, 140, 142)\\",
  \\"color-gray-50\\": \\"rgb(200, 204, 207)\\",
  \\"color-gray-40\\": \\"rgb(228, 231, 233)\\",
  \\"color-brand\\": \\"rgb(35, 54, 89)\\",
  \\"color-gray-30\\": \\"rgb(242, 243, 244)\\",
  \\"color-gray-20\\": \\"rgb(248, 248, 249)\\",
  \\"color-gray-10\\": \\"rgb(249, 250, 251)\\",
  \\"size-square-40\\": \\"0.75rem\\",
  \\"size-icon-80\\": \\"2.5rem\\",
  \\"size-square-30\\": \\"0.5rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-square-20\\": \\"0.25rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-square-10\\": \\"0.125rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.5rem\\",
  \\"size-square-190\\": \\"4.5rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.25rem\\",
  \\"size-square-180\\": \\"4.25rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-square-170\\": \\"4rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-square-25\\": \\"0.375rem\\",
  \\"size-square-160\\": \\"3.75rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"4rem\\",
  \\"size-square-150\\": \\"3.5rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-square-140\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-square-130\\": \\"3rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-square-120\\": \\"2.75rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-square-110\\": \\"2.5rem\\",
  \\"size-square-0\\": \\"0\\",
  \\"size-square-100\\": \\"2.25rem\\",
  \\"size-square-200\\": \\"4.75rem\\",
  \\"size-sidebar\\": \\"13.75rem\\",
  \\"size-square-90\\": \\"2rem\\",
  \\"size-square-80\\": \\"1.75rem\\",
  \\"size-square-70\\": \\"1.5rem\\",
  \\"size-square-60\\": \\"1.25rem\\",
  \\"size-square-50\\": \\"1rem\\",
  \\"size-icon-90\\": \\"2.75rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-negative-100\\": \\"-2.25rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-negative-200\\": \\"-4.75rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-negative-90\\": \\"-2rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-negative-80\\": \\"-1.75rem\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-negative-70\\": \\"-1.5rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-negative-60\\": \\"-1.25rem\\",
  \\"space-negative-50\\": \\"-1rem\\",
  \\"space-negative-40\\": \\"-0.75rem\\",
  \\"space-negative-30\\": \\"-0.5rem\\",
  \\"space-negative-20\\": \\"-0.25rem\\",
  \\"space-negative-10\\": \\"-0.125rem\\",
  \\"space-negative-190\\": \\"-4.5rem\\",
  \\"space-negative-180\\": \\"-4.25rem\\",
  \\"space-negative-170\\": \\"-4rem\\",
  \\"space-negative-160\\": \\"-3.75rem\\",
  \\"space-negative-150\\": \\"-3.5rem\\",
  \\"space-negative-140\\": \\"-3.25rem\\",
  \\"space-negative-130\\": \\"-3rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-negative-120\\": \\"-2.75rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"space-negative-110\\": \\"-2.5rem\\",
  \\"color-text-link-darker\\": \\"rgb(3, 44, 94)\\",
  \\"color-text-link-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-link-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-text-link-destructive\\": \\"rgb(226, 37, 37)\\",
  \\"color-text-warning\\": \\"rgb(228, 98, 22)\\",
  \\"color-text-new\\": \\"rgb(109, 46, 209)\\",
  \\"color-text-inverse-weak\\": \\"rgb(200, 204, 207)\\",
  \\"color-text-link-destructive-darker\\": \\"rgb(96, 1, 1)\\",
  \\"color-text-link-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-text-success\\": \\"rgb(0, 153, 74)\\",
  \\"color-text-weak\\": \\"rgb(112, 117, 120)\\",
  \\"color-text-link-destructive-light\\": \\"rgb(236, 182, 182)\\",
  \\"color-text-icon\\": \\"rgb(112, 117, 120)\\",
  \\"color-text-link\\": \\"rgb(0, 94, 166)\\",
  \\"color-text-error-dark\\": \\"rgb(146, 18, 0)\\",
  \\"color-text-neutral\\": \\"rgb(0, 62, 130)\\",
  \\"color-text-error\\": \\"rgb(226, 37, 37)\\",
  \\"color-text-icon-inverse\\": \\"rgb(200, 204, 207)\\",
  \\"color-text-error-strong\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-link-dark\\": \\"rgb(0, 62, 130)\\",
  \\"color-text-error-weak\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-link-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-link-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-text\\": \\"rgb(40, 42, 43)\\",
  \\"color-text-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-inverse-weaker\\": \\"rgb(136, 140, 142)\\",
  \\"color-text-link-light\\": \\"rgb(179, 211, 233)\\",
  \\"color-text-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-error-light\\": \\"rgb(236, 182, 182)\\",
  \\"color-text-weaker\\": \\"rgb(200, 204, 207)\\",
  \\"color-text-warning-dark\\": \\"rgb(168, 62, 0)\\",
  \\"color-text-warning-strong\\": \\"rgb(195, 83, 35)\\",
  \\"color-text-link-destructive-dark\\": \\"rgb(178, 6, 0)\\",
  \\"color-text-link-destructive-strong\\": \\"rgb(173, 17, 17)\\",
  \\"z-index-0\\": \\"2000\\",
  \\"z-index-90\\": \\"2090\\",
  \\"z-index-80\\": \\"2080\\",
  \\"z-index-70\\": \\"2070\\",
  \\"z-index-60\\": \\"2060\\",
  \\"z-index-50\\": \\"2050\\",
  \\"z-index-40\\": \\"2040\\",
  \\"z-index-30\\": \\"2030\\",
  \\"z-index-20\\": \\"2020\\",
  \\"z-index-10\\": \\"2010\\"
}"
`;

exports[`Design Tokens matches the Global theme 1`] = `
"{
  \\"color-background-user\\": \\"rgb(200, 175, 240)\\",
  \\"color-background-trial\\": \\"rgb(209, 250, 224)\\",
  \\"color-background-subaccount\\": \\"rgb(255, 241, 179)\\",
  \\"color-background-primary-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-primary-lighter\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-background-destructive-lighter\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-brand-highlight-lightest\\": \\"rgba(242, 47, 70, 0.1)\\",
  \\"color-background-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-inverse-light\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-background-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-background-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-background-inverse-strong\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-error-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-new\\": \\"rgb(231, 220, 250)\\",
  \\"color-background-neutral-lightest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-dark\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-strong\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-primary\\": \\"rgb(2, 99, 224)\\",
  \\"color-background-primary-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-background-destructive-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-row-striped\\": \\"rgb(244, 244, 246)\\",
  \\"color-background-primary-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-background-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-background-success-lightest\\": \\"rgb(237, 253, 243)\\",
  \\"color-background-destructive-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-error-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-primary-lightest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-primary-darkest\\": \\"rgb(6, 3, 58)\\",
  \\"color-background-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-required\\": \\"rgb(235, 86, 86)\\",
  \\"color-background-destructive-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-destructive-light\\": \\"rgb(246, 177, 177)\\",
  \\"color-background-primary-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-primary-light\\": \\"rgb(153, 205, 255)\\",
  \\"color-background-warning-lightest\\": \\"rgb(254, 245, 238)\\",
  \\"color-background-body\\": \\"rgb(255, 255, 255)\\",
  \\"color-background-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-background-darker\\": \\"rgb(136, 145, 170)\\",
  \\"color-background\\": \\"rgb(244, 244, 246)\\",
  \\"color-background-primary-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-background-stronger\\": \\"rgb(136, 145, 170)\\",
  \\"color-background-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-background-strongest\\": \\"rgb(75, 86, 113)\\",
  \\"color-background-body-inverse\\": \\"rgb(18, 28, 45)\\",
  \\"color-background-inverse\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-background-overlay\\": \\"rgba(6, 3, 58, 0.4)\\",
  \\"color-background-darkest\\": \\"rgb(75, 86, 113)\\",
  \\"color-border-warning-weak\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-error-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-destructive-lighter\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-primary-lighter\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-inverse-lightest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-primary-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-border-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-border-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-lighter-stronger\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-border-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-border-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-lightest-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-primary\\": \\"rgb(2, 99, 224)\\",
  \\"color-border-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-border-lighter\\": \\"rgb(225, 227, 234)\\",
  \\"color-border-error-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-dark\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-border-strong\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-warning-light\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-inverse-lighter\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-weak\\": \\"rgb(202, 205, 216)\\",
  \\"color-border-neutral\\": \\"rgb(2, 99, 224)\\",
  \\"color-border-success-lightest\\": \\"rgb(237, 253, 243)\\",
  \\"color-border-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-error-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-error-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-destructive-light\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-primary-light\\": \\"rgb(102, 179, 255)\\",
  \\"color-border-neutral-weak\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-success-light\\": \\"rgb(54, 213, 118)\\",
  \\"color-border\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-inverse-darker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-warning-lightest\\": \\"rgb(254, 245, 238)\\",
  \\"color-border-primary-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-border-destructive-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-success-weak\\": \\"rgb(54, 213, 118)\\",
  \\"color-border-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-border-neutral-light\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-inverse\\": \\"rgba(255, 255, 255, 0.5)\\",
  \\"color-border-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-primary-weak\\": \\"rgb(102, 179, 255)\\",
  \\"color-border-error-light\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-destructive-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-weaker\\": \\"rgb(225, 227, 234)\\",
  \\"color-border-light\\": \\"rgb(202, 205, 216)\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"2px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"border-width-30\\": \\"4px\\",
  \\"border-width-40\\": \\"8px\\",
  \\"shadow\\": \\"0 4px 16px 0 rgba(18, 28, 45, 0.2)\\",
  \\"shadow-border-inverse-lightest\\": \\"0 0 0 1px #ffffff\\",
  \\"shadow-border-destructive-darker\\": \\"0 0 0 1px #4a0b0b\\",
  \\"shadow-border-primary-darker\\": \\"0 0 0 1px #030b5d\\",
  \\"shadow-border-light\\": \\"0 0 0 1px #cacdd8\\",
  \\"shadow-border-destructive-stronger\\": \\"0 0 0 1px #4a0b0b\\",
  \\"shadow-border-primary-stronger\\": \\"0 0 0 1px #030b5d\\",
  \\"shadow-border-destructive-lighter\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-destructive-weaker\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-primary-weaker\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-border-primary-lighter\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-border-inverse-light\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-low\\": \\"0 2px 8px 0 rgba(18, 28, 45, 0.1)\\",
  \\"shadow-border-inverse-strong\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-border-strong\\": \\"0 0 0 1px #cacdd8\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(2, 99, 224, 0.7)\\",
  \\"shadow-focus-inverse\\": \\"0 0 0 4px rgba(255, 255, 255, 0.4)\\",
  \\"shadow-border-primary\\": \\"0 0 0 1px #0263e0\\",
  \\"shadow-border-destructive\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-border-error-dark\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-high\\": \\"0 16px 24px 0 rgba(18, 28, 45, 0.2)\\",
  \\"shadow-border-lighter\\": \\"0 0 0 1px #e1e3ea\\",
  \\"shadow-border-error-strong\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-border-error-weak\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-border-error\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-border-inverse-darker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-dark\\": \\"0 0 0 1px #001489\\",
  \\"shadow-border-inverse-weaker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-strong\\": \\"0 0 0 1px #001489\\",
  \\"shadow-border-primary-light\\": \\"0 0 0 1px #99cdff\\",
  \\"shadow-border-primary-weak\\": \\"0 0 0 1px #99cdff\\",
  \\"shadow-border-destructive-light\\": \\"0 0 0 1px #f6b1b1\\",
  \\"shadow-border-destructive-weak\\": \\"0 0 0 1px #f6b1b1\\",
  \\"shadow-border-stronger\\": \\"0 0 0 1px #e1e3ea\\",
  \\"shadow-border\\": \\"0 0 0 1px #8891aa\\",
  \\"shadow-border-inverse\\": \\"0 0 0 1px rgba(255, 255, 255, 0.5)\\",
  \\"shadow-border-error-light\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-card\\": \\"0 2px 8px 0 rgba(18, 28, 45, 0.1)\\",
  \\"shadow-border-inverse-strongest\\": \\"0 0 0 1px #ffffff\\",
  \\"font-family-text\\": \\"'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"400\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"600\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-0\\": \\"0\\",
  \\"line-height-110\\": \\"4rem\\",
  \\"line-height-90\\": \\"2.75rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.5rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.5rem\\",
  \\"line-height-30\\": \\"1.25rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-gray-0\\": \\"rgb(255, 255, 255)\\",
  \\"color-gray-100\\": \\"rgb(18, 28, 45)\\",
  \\"color-gray-90\\": \\"rgb(31, 48, 76)\\",
  \\"color-gray-80\\": \\"rgb(57, 71, 98)\\",
  \\"color-gray-70\\": \\"rgb(75, 86, 113)\\",
  \\"color-gray-60\\": \\"rgb(96, 107, 133)\\",
  \\"color-gray-50\\": \\"rgb(136, 145, 170)\\",
  \\"color-gray-40\\": \\"rgb(174, 178, 193)\\",
  \\"color-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color-gray-30\\": \\"rgb(202, 205, 216)\\",
  \\"color-gray-20\\": \\"rgb(225, 227, 234)\\",
  \\"color-gray-10\\": \\"rgb(244, 244, 246)\\",
  \\"size-square-40\\": \\"0.75rem\\",
  \\"size-icon-80\\": \\"2.5rem\\",
  \\"size-square-30\\": \\"0.5rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-square-20\\": \\"0.25rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-square-10\\": \\"0.125rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.5rem\\",
  \\"size-square-190\\": \\"4.5rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.25rem\\",
  \\"size-square-180\\": \\"4.25rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-square-170\\": \\"4rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-square-25\\": \\"0.375rem\\",
  \\"size-square-160\\": \\"3.75rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"4rem\\",
  \\"size-square-150\\": \\"3.5rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-square-140\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-square-130\\": \\"3rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-square-120\\": \\"2.75rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-square-110\\": \\"2.5rem\\",
  \\"size-square-0\\": \\"0\\",
  \\"size-square-100\\": \\"2.25rem\\",
  \\"size-square-200\\": \\"4.75rem\\",
  \\"size-sidebar\\": \\"13.75rem\\",
  \\"size-square-90\\": \\"2rem\\",
  \\"size-square-80\\": \\"1.75rem\\",
  \\"size-square-70\\": \\"1.5rem\\",
  \\"size-square-60\\": \\"1.25rem\\",
  \\"size-square-50\\": \\"1rem\\",
  \\"size-icon-90\\": \\"2.75rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-negative-100\\": \\"-2.25rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-negative-200\\": \\"-4.75rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-negative-90\\": \\"-2rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-negative-80\\": \\"-1.75rem\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-negative-70\\": \\"-1.5rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-negative-60\\": \\"-1.25rem\\",
  \\"space-negative-50\\": \\"-1rem\\",
  \\"space-negative-40\\": \\"-0.75rem\\",
  \\"space-negative-30\\": \\"-0.5rem\\",
  \\"space-negative-20\\": \\"-0.25rem\\",
  \\"space-negative-10\\": \\"-0.125rem\\",
  \\"space-negative-190\\": \\"-4.5rem\\",
  \\"space-negative-180\\": \\"-4.25rem\\",
  \\"space-negative-170\\": \\"-4rem\\",
  \\"space-negative-160\\": \\"-3.75rem\\",
  \\"space-negative-150\\": \\"-3.5rem\\",
  \\"space-negative-140\\": \\"-3.25rem\\",
  \\"space-negative-130\\": \\"-3rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-negative-120\\": \\"-2.75rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"space-negative-110\\": \\"-2.5rem\\",
  \\"color-text-link-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-text-link-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-link-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-text-link-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-text-new\\": \\"rgb(109, 46, 209)\\",
  \\"color-text-inverse-weak\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-link-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-text-link-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-text-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-text-weak\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link-destructive-light\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-icon\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link\\": \\"rgb(2, 99, 224)\\",
  \\"color-text-error-dark\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-neutral\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-icon-inverse\\": \\"rgb(136, 145, 170)\\",
  \\"color-text-error-strong\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-link-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-error-weak\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-link-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-link-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-text\\": \\"rgb(18, 28, 45)\\",
  \\"color-text-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-inverse-weaker\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link-light\\": \\"rgb(153, 205, 255)\\",
  \\"color-text-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-error-light\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-weaker\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-warning-dark\\": \\"rgb(195, 83, 35)\\",
  \\"color-text-warning-strong\\": \\"rgb(195, 83, 35)\\",
  \\"color-text-link-destructive-dark\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-link-destructive-strong\\": \\"rgb(173, 17, 17)\\",
  \\"z-index-0\\": \\"0\\",
  \\"z-index-90\\": \\"90\\",
  \\"z-index-80\\": \\"80\\",
  \\"z-index-70\\": \\"70\\",
  \\"z-index-60\\": \\"60\\",
  \\"z-index-50\\": \\"50\\",
  \\"z-index-40\\": \\"40\\",
  \\"z-index-30\\": \\"30\\",
  \\"z-index-20\\": \\"20\\",
  \\"z-index-10\\": \\"10\\"
}"
`;

exports[`Design Tokens matches the Sendgrid theme 1`] = `
"{
  \\"color-background-user\\": \\"rgb(200, 175, 240)\\",
  \\"color-background-trial\\": \\"rgb(209, 250, 224)\\",
  \\"color-background-subaccount\\": \\"rgb(255, 241, 179)\\",
  \\"color-background-primary-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-primary-lighter\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-background-destructive-lighter\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-brand-highlight-lightest\\": \\"rgba(242, 47, 70, 0.1)\\",
  \\"color-background-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-inverse-light\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-background-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-background-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-background-inverse-strong\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-error-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-new\\": \\"rgb(231, 220, 250)\\",
  \\"color-background-neutral-lightest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-dark\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-strong\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-primary\\": \\"rgb(2, 99, 224)\\",
  \\"color-background-primary-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-background-destructive-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-row-striped\\": \\"rgb(244, 244, 246)\\",
  \\"color-background-primary-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-background-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-background-success-lightest\\": \\"rgb(237, 253, 243)\\",
  \\"color-background-destructive-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-error-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-primary-lightest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-primary-darkest\\": \\"rgb(6, 3, 58)\\",
  \\"color-background-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-required\\": \\"rgb(235, 86, 86)\\",
  \\"color-background-destructive-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-destructive-light\\": \\"rgb(246, 177, 177)\\",
  \\"color-background-primary-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-primary-light\\": \\"rgb(153, 205, 255)\\",
  \\"color-background-warning-lightest\\": \\"rgb(254, 245, 238)\\",
  \\"color-background-body\\": \\"rgb(255, 255, 255)\\",
  \\"color-background-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-background-darker\\": \\"rgb(136, 145, 170)\\",
  \\"color-background\\": \\"rgb(244, 244, 246)\\",
  \\"color-background-primary-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-background-stronger\\": \\"rgb(136, 145, 170)\\",
  \\"color-background-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-background-strongest\\": \\"rgb(75, 86, 113)\\",
  \\"color-background-body-inverse\\": \\"rgb(18, 28, 45)\\",
  \\"color-background-inverse\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-background-overlay\\": \\"rgba(6, 3, 58, 0.4)\\",
  \\"color-background-darkest\\": \\"rgb(75, 86, 113)\\",
  \\"color-border-warning-weak\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-error-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-destructive-lighter\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-primary-lighter\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-inverse-lightest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-primary-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-border-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-border-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-lighter-stronger\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-border-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-border-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-lightest-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-primary\\": \\"rgb(2, 99, 224)\\",
  \\"color-border-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-border-lighter\\": \\"rgb(225, 227, 234)\\",
  \\"color-border-error-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-dark\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-border-strong\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-warning-light\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-inverse-lighter\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-weak\\": \\"rgb(202, 205, 216)\\",
  \\"color-border-neutral\\": \\"rgb(2, 99, 224)\\",
  \\"color-border-success-lightest\\": \\"rgb(237, 253, 243)\\",
  \\"color-border-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-error-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-error-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-destructive-light\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-primary-light\\": \\"rgb(102, 179, 255)\\",
  \\"color-border-neutral-weak\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-success-light\\": \\"rgb(54, 213, 118)\\",
  \\"color-border\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-inverse-darker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-warning-lightest\\": \\"rgb(254, 245, 238)\\",
  \\"color-border-primary-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-border-destructive-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-success-weak\\": \\"rgb(54, 213, 118)\\",
  \\"color-border-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-border-neutral-light\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-inverse\\": \\"rgba(255, 255, 255, 0.5)\\",
  \\"color-border-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-primary-weak\\": \\"rgb(102, 179, 255)\\",
  \\"color-border-error-light\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-destructive-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-weaker\\": \\"rgb(225, 227, 234)\\",
  \\"color-border-light\\": \\"rgb(202, 205, 216)\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"2px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"border-width-30\\": \\"4px\\",
  \\"border-width-40\\": \\"8px\\",
  \\"shadow\\": \\"0 4px 16px 0 rgba(18, 28, 45, 0.2)\\",
  \\"shadow-border-inverse-lightest\\": \\"0 0 0 1px #ffffff\\",
  \\"shadow-border-destructive-darker\\": \\"0 0 0 1px #4a0b0b\\",
  \\"shadow-border-primary-darker\\": \\"0 0 0 1px #030b5d\\",
  \\"shadow-border-light\\": \\"0 0 0 1px #cacdd8\\",
  \\"shadow-border-destructive-stronger\\": \\"0 0 0 1px #4a0b0b\\",
  \\"shadow-border-primary-stronger\\": \\"0 0 0 1px #030b5d\\",
  \\"shadow-border-destructive-lighter\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-destructive-weaker\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-primary-weaker\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-border-primary-lighter\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-border-inverse-light\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-low\\": \\"0 2px 8px 0 rgba(18, 28, 45, 0.1)\\",
  \\"shadow-border-inverse-strong\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-border-strong\\": \\"0 0 0 1px #cacdd8\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(2, 99, 224, 0.7)\\",
  \\"shadow-focus-inverse\\": \\"0 0 0 4px rgba(255, 255, 255, 0.4)\\",
  \\"shadow-border-primary\\": \\"0 0 0 1px #0263e0\\",
  \\"shadow-border-destructive\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-border-error-dark\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-high\\": \\"0 16px 24px 0 rgba(18, 28, 45, 0.2)\\",
  \\"shadow-border-lighter\\": \\"0 0 0 1px #e1e3ea\\",
  \\"shadow-border-error-strong\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-border-error-weak\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-border-error\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-border-inverse-darker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-dark\\": \\"0 0 0 1px #001489\\",
  \\"shadow-border-inverse-weaker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-strong\\": \\"0 0 0 1px #001489\\",
  \\"shadow-border-primary-light\\": \\"0 0 0 1px #99cdff\\",
  \\"shadow-border-primary-weak\\": \\"0 0 0 1px #99cdff\\",
  \\"shadow-border-destructive-light\\": \\"0 0 0 1px #f6b1b1\\",
  \\"shadow-border-destructive-weak\\": \\"0 0 0 1px #f6b1b1\\",
  \\"shadow-border-stronger\\": \\"0 0 0 1px #e1e3ea\\",
  \\"shadow-border\\": \\"0 0 0 1px #8891aa\\",
  \\"shadow-border-inverse\\": \\"0 0 0 1px rgba(255, 255, 255, 0.5)\\",
  \\"shadow-border-error-light\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-card\\": \\"0 2px 8px 0 rgba(18, 28, 45, 0.1)\\",
  \\"shadow-border-inverse-strongest\\": \\"0 0 0 1px #ffffff\\",
  \\"font-family-text\\": \\"'Colfax', Helvetica, Arial, sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"400\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"600\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-0\\": \\"0\\",
  \\"line-height-110\\": \\"4rem\\",
  \\"line-height-90\\": \\"2.75rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.5rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.5rem\\",
  \\"line-height-30\\": \\"1.25rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-gray-0\\": \\"rgb(255, 255, 255)\\",
  \\"color-gray-100\\": \\"rgb(18, 28, 45)\\",
  \\"color-gray-90\\": \\"rgb(31, 48, 76)\\",
  \\"color-gray-80\\": \\"rgb(57, 71, 98)\\",
  \\"color-gray-70\\": \\"rgb(75, 86, 113)\\",
  \\"color-gray-60\\": \\"rgb(96, 107, 133)\\",
  \\"color-gray-50\\": \\"rgb(136, 145, 170)\\",
  \\"color-gray-40\\": \\"rgb(174, 178, 193)\\",
  \\"color-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color-gray-30\\": \\"rgb(202, 205, 216)\\",
  \\"color-gray-20\\": \\"rgb(225, 227, 234)\\",
  \\"color-gray-10\\": \\"rgb(244, 244, 246)\\",
  \\"size-square-40\\": \\"0.75rem\\",
  \\"size-icon-80\\": \\"2.5rem\\",
  \\"size-square-30\\": \\"0.5rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-square-20\\": \\"0.25rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-square-10\\": \\"0.125rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.5rem\\",
  \\"size-square-190\\": \\"4.5rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.25rem\\",
  \\"size-square-180\\": \\"4.25rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-square-170\\": \\"4rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-square-25\\": \\"0.375rem\\",
  \\"size-square-160\\": \\"3.75rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"4rem\\",
  \\"size-square-150\\": \\"3.5rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-square-140\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-square-130\\": \\"3rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-square-120\\": \\"2.75rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-square-110\\": \\"2.5rem\\",
  \\"size-square-0\\": \\"0\\",
  \\"size-square-100\\": \\"2.25rem\\",
  \\"size-square-200\\": \\"4.75rem\\",
  \\"size-sidebar\\": \\"13.75rem\\",
  \\"size-square-90\\": \\"2rem\\",
  \\"size-square-80\\": \\"1.75rem\\",
  \\"size-square-70\\": \\"1.5rem\\",
  \\"size-square-60\\": \\"1.25rem\\",
  \\"size-square-50\\": \\"1rem\\",
  \\"size-icon-90\\": \\"2.75rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-negative-100\\": \\"-2.25rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-negative-200\\": \\"-4.75rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-negative-90\\": \\"-2rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-negative-80\\": \\"-1.75rem\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-negative-70\\": \\"-1.5rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-negative-60\\": \\"-1.25rem\\",
  \\"space-negative-50\\": \\"-1rem\\",
  \\"space-negative-40\\": \\"-0.75rem\\",
  \\"space-negative-30\\": \\"-0.5rem\\",
  \\"space-negative-20\\": \\"-0.25rem\\",
  \\"space-negative-10\\": \\"-0.125rem\\",
  \\"space-negative-190\\": \\"-4.5rem\\",
  \\"space-negative-180\\": \\"-4.25rem\\",
  \\"space-negative-170\\": \\"-4rem\\",
  \\"space-negative-160\\": \\"-3.75rem\\",
  \\"space-negative-150\\": \\"-3.5rem\\",
  \\"space-negative-140\\": \\"-3.25rem\\",
  \\"space-negative-130\\": \\"-3rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-negative-120\\": \\"-2.75rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"space-negative-110\\": \\"-2.5rem\\",
  \\"color-text-link-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-text-link-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-link-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-text-link-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-text-new\\": \\"rgb(109, 46, 209)\\",
  \\"color-text-inverse-weak\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-link-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-text-link-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-text-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-text-weak\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link-destructive-light\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-icon\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link\\": \\"rgb(2, 99, 224)\\",
  \\"color-text-error-dark\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-neutral\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-icon-inverse\\": \\"rgb(136, 145, 170)\\",
  \\"color-text-error-strong\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-link-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-error-weak\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-link-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-link-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-text\\": \\"rgb(18, 28, 45)\\",
  \\"color-text-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-inverse-weaker\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link-light\\": \\"rgb(153, 205, 255)\\",
  \\"color-text-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-error-light\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-weaker\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-warning-dark\\": \\"rgb(195, 83, 35)\\",
  \\"color-text-warning-strong\\": \\"rgb(195, 83, 35)\\",
  \\"color-text-link-destructive-dark\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-link-destructive-strong\\": \\"rgb(173, 17, 17)\\",
  \\"z-index-0\\": \\"0\\",
  \\"z-index-90\\": \\"90\\",
  \\"z-index-80\\": \\"80\\",
  \\"z-index-70\\": \\"70\\",
  \\"z-index-60\\": \\"60\\",
  \\"z-index-50\\": \\"50\\",
  \\"z-index-40\\": \\"40\\",
  \\"z-index-30\\": \\"30\\",
  \\"z-index-20\\": \\"20\\",
  \\"z-index-10\\": \\"10\\"
}"
`;
